Revision history for Lufi

?.??.? ????-??-??
	- Fix invitations sorting order (#163)

0.04.3 2019-09 29
	- Translate dates in invitations (#161)
	- Ignore all .conf files in .gitignore
	- Remove redundant fixed_domain setting in conf template

0.04.2 2019-08-14
	- Update german language
	- Fix logout button color on mobile view (#157)

0.04.1 2019-08-12
	- LocalStorage key is now prefix-dependant (#154)
	  This allow to not mix up files in localStorage for two instances if they
	  are on the same domain
	- Fix bug on cookie-based language choice when using two instances on same
	  domain, with one’s path is the beginning of the other instance’s path.
	  WARNING! You need to do a `carton install --deployment …` to have the fix.
	- Fix navbar bug (there can be too much items in it, depending on Lufi
	  settings (LDAP, invitations…), trouble beginning at screens < 1800px)
	- Add setting to customize the instance name (#156)

0.04.0 2019-08-04
	- Allow to zip the files before upload
	- Allow to see what’s in zip file on download page
	- Allow to individually download files from zip file (only if zip created by Lufi)
	- Allow to invite people to send you files on Lufi when using LDAP auth (#150).
	  Feature paid for by TECH’advantage (https://www.tech-advantage.com/)

0.03.7 2019-08-01
	- Fix missing default values for some settings (mildis)

0.03.6 2019-07-30
	- Update german translation
	- Use configured url prefix when using mail sending interface
	- Avoid collision between startup and recurring provisionings
	- Avoid files password autocomplete by browsers (tested with Firefox and
	  Chromium) (#138)

0.03.5 2018-12-06
	- Fix CI

0.03.4 2018-12-06
	- Update arabic, german and italian translations

0.03.3 2018-11-02
	- Update deps, seems to fix install on Debian Jessie

0.03.2 2018-11-02
	- Fix dependences in Lufi.pm

0.03.1 2018-10-29
	- Fix default CSP Header

0.03 2018-10-28
	- Use Mojo::SQLite instead of ORLite
	- Use FiatTux plugins