@@ -9,17 +9,18 @@
     <%= l('Rows in red mean that the files have expired and are no longer available.') %>
 </p>
 <div class="files-buttons">
-    <a href="#" id="exportStorage" class="btn left-mg cyan"><%= l('Export localStorage data') %></a>
-    <a href="#" id="purgeExpired" class="btn left-mg cyan"><%= l('Purge expired files from localStorage') %></a>
-    <a href="#" id="clickImport" class="btn left-mg cyan"><%= l('Import localStorage data') %></a>
+    <a href="#" id="exportStorage"   class="btn left-mg cyan"><%= l('Export localStorage data') %></a>
+    <a href="#" id="purgeExpired"    class="btn left-mg cyan"><%= l('Purge expired files from localStorage') %></a>
+    <a href="#" id="clickImport"     class="btn left-mg cyan"><%= l('Import localStorage data') %></a>
     <span class="file-field input-field">
         <input type="file" id="import" onchange="importStorage(this.files)">
     </span>
+    <a href="#" id="invertSelection" class="btn left-mg cyan"><%= l('Invert selection') %></a>
     <a href="#" class="btn left-mg cyan disabled" id="mass-delete" disabled><%= l('Delete selected files') %></a>
 </div>
 
 <div>
-    <table class="responsive-table striped">
+    <table class="responsive-table highlight striped">
         <thead>
             <tr>
                 <th class="center-align"></th>
