@@ -2,6 +2,9 @@ Revision history for Lufi
 
 ?.??.? ????-??-??
 	- Fix invitations sorting order (#163)
+	- Same behavior on files and invitations tables (striped, invert selection
+	button) (#166)
+	- Change row color on hover
 
 0.04.3 2019-09 29
 	- Translate dates in invitations (#161)
